--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals"],
+  // "plugin:react/recommended"
+  "rules": { "react/no-unescaped-entities": 0,
+              "@next/next/no-page-custom-font": "off"
+           }
+ 
+        
+  
+
+  
 }
